--- a/.cproject
+++ b/.cproject
@@ -219,6 +219,7 @@
 								<option id="gnu.c.link.option.strip.842264944" name="Omit all symbol information (-s)" superClass="gnu.c.link.option.strip"/>
 								<option id="gnu.c.link.option.noshared.843940819" name="No shared libraries (-static)" superClass="gnu.c.link.option.noshared"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.link.option.libs.2122076415" name="Libraries (-l)" superClass="gnu.c.link.option.libs" useByScannerDiscovery="false" valueType="libs">
+									<listOptionValue builtIn="false" value="Lab3"/>
 									<listOptionValue builtIn="false" value="OS"/>
 									<listOptionValue builtIn="false" value="FG"/>
 								</option>
